[gd_scene load_steps=9 format=3 uid="uid://cpgbkdadattta"]

[ext_resource type="Script" path="res://Menu.gd" id="1_ewn83"]
[ext_resource type="Texture2D" uid="uid://u44cpch5n41u" path="res://UI ASSETS/PACTS MENU TEMP.png" id="2_qocvi"]
[ext_resource type="Texture2D" uid="uid://b6egc88v7bvv2" path="res://UI ASSETS/Planetary and Aerial Combat Tabletop Simulator.png" id="3_tispk"]
[ext_resource type="Texture2D" uid="uid://chu70ahjjoxs3" path="res://UI ASSETS/Guardian Circle.png" id="5_82ov3"]
[ext_resource type="Script" path="res://MenuCamera.gd" id="6_03ets"]

[sub_resource type="Gradient" id="Gradient_j06lm"]
colors = PackedColorArray(1, 1, 1, 0.494118, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_b70ew"]
gradient = SubResource("Gradient_j06lm")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_hnrcg"]
load_path = "res://.godot/imported/ARMCO logo.png-843e2f34cc83aaef3bf8bc099b4e6007.ctex"

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ewn83")

[node name="PactsMenuTemp" type="Sprite2D" parent="."]
position = Vector2(1250, 714)
texture = ExtResource("2_qocvi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2500.0
offset_right = 2756.0
offset_bottom = 2500.0
rotation = 1.5708
texture = SubResource("GradientTexture1D_b70ew")

[node name="PlanetaryAndAerialCombatTabletopSimulator" type="Sprite2D" parent="."]
position = Vector2(740, 96)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_tispk")

[node name="ArmcoLogo" type="Sprite2D" parent="."]
position = Vector2(96, 1332)
scale = Vector2(0.1, 0.1)
texture = SubResource("CompressedTexture2D_hnrcg")

[node name="GuardianCircle" type="Sprite2D" parent="."]
position = Vector2(246, 1332)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_82ov3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 2000.0
offset_top = 100.0
offset_right = 2200.0
offset_bottom = 201.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Campaign Select" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Campaign Select
"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[node name="MainMenuCamera" type="Camera2D" parent="."]
position = Vector2(1250, 714)
zoom = Vector2(0.77, 0.77)
script = ExtResource("6_03ets")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Campaign Select" to="." method="_on_campaign_select_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
